--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 			</div>
 		<div class="rightcolumn">
 			<div class="card">
-	      		<h2>Kindly Support the Vlog page</h2>
+	      		<h2>Kindly Support and check the products pelow</h2>
 	      		<div class="fakeimg" style="height:100px;">Here...</div>
 	      		
 			</div>
