--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 		<ul>
 			<li><a href="Contact Us.html"> Contact Us</a></li>
 			<li><a href="About Us.html"> About Us</a></li>
-			<li><a href="Video Log.html"> Video Log</a></li>
 			<li><a href="Set piece.html"> Set Piece</a></li>
 			<li><a href="Defending.html"> Defending</a></li>
 			<li><a href="Attacking.html"> Attacking</a></li>
@@ -229,7 +228,7 @@
 			</div>
 		<div class="rightcolumn">
 			<div class="card">
-	      		<h2>Kindly Support and check the products pelow</h2>
+	      		<h2>Kindly Support and check the products below</h2>
 	      		<div class="fakeimg" style="height:100px;">Here...</div>
 	      		
 			</div>
