--- a/Contact Us.html
+++ b/Contact Us.html
@@ -14,7 +14,6 @@
 			<ul>
 				<li id="active"><a href="Contact Us.html"> Contact Us</a></li>
 				<li><a href="About Us.html"> About Us</a></li>
-				<li><a href="Video Log.html"> Video Log</a></li>
 				<li><a href="Set piece.html"> Set Piece</a></li>
 				<li><a href="Defending.html"> Defending</a></li>
 				<li ><a href="Attacking.html"> Attacking</a></li>
@@ -30,7 +29,7 @@
 					<h2>Contact Us</h2>
 					<p style="text-align: center;">
 						For any questions regarding the FIFA video game series,<br>Sponsorship,
-						press, Advertising opportunities, or any general query’s,  <br>
+						press, Advertising opportunities, or any general query, Kindly reach out with the numbers below  <br>
 						 <br>
 
 						Phone: +2348186221894
