--- a/About Us.html
+++ b/About Us.html
@@ -48,7 +48,7 @@
 <div class="rightcolumn">
 			<div class="card">
 	      		<h2></h2>
-	      		<div class="fakeimg" style="height:100px;">Here...</div>
+	      		<div class="fakeimg" style="height:100px;"></div>
 	      		
 			</div>
 
