--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
 			</div>
 		<div class="rightcolumn">
 			<div class="card">
-	      		<h2>Kindly Support and check the products below</h2>
-	      		<div class="fakeimg" style="height:100px;">Here...</div>
+	      		<h2></h2>
+	      		<div class="fakeimg" style="height:100px;"></div>
 	      		
 			</div>
 
