--- a/Set piece.html
+++ b/Set piece.html
@@ -13,7 +13,6 @@
 		<ul>
 			<li ><a href="Contact Us.html"> Contact Us</a></li>
 			<li><a href="About Us.html"> About Us</a></li>
-			<li><a href="Video Log.html"> Video Log</a></li>
 			<li id="active"><a href="Set piece.html"> Set Piece</a></li>
 			<li><a href="Defending.html"> Defending</a></li>
 			<li ><a href="Attacking.html"> Attacking</a></li>
@@ -340,8 +339,8 @@
 		   </div>
 		<div class="rightcolumn">
 			<div class="card">
-	      		<h2>Kindly Support the Vlog page</h2>
-	      		<div class="fakeimg" style="height:100px;">Here...</div>
+	      		<h2></h2>
+	      		<div class="fakeimg" style="height:100px;"></div>
 	      		
 			</div>
 
