--- a/Contact Us.html
+++ b/Contact Us.html
@@ -41,8 +41,8 @@
 		    </div>	
 		    <div class="rightcolumn">
 				<div class="card">
-		      		<h2>Kindly Support the Vlog page</h2>
-		      		<div class="fakeimg" style="height:100px;">Here...</div>
+		      		<h2></h2>
+		      		<div class="fakeimg" style="height:100px;"></div>
 		      		
 				</div>
 
