--- a/Defending.html
+++ b/Defending.html
@@ -221,7 +221,7 @@
 		<div class="rightcolumn">
 			<div class="card">
 	      		<h2></h2>
-	      		<div class="fakeimg" style="height:100px;">Here...</div>
+	      		<div class="fakeimg" style="height:100px;"></div>
 	      		
 			</div>
 
