--- a/Contact Us.html
+++ b/Contact Us.html
@@ -1,60 +1,50 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<title>E-Fifa</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-</head>
+  <head>
+    <meta charset="utf-8" />
+    <title>E-Fifa</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
 
-<body>
-	<div id="wrapper">
-	
-		<div class="nav">
-			<a href="index.html"><h2>E-Fifa</h2></a>
-			<ul>
-				<li id="active"><a href="Contact Us.html"> Contact Us</a></li>
-				<li><a href="About Us.html"> About Us</a></li>
-				<li><a href="Set piece.html"> Set Piece</a></li>
-				<li><a href="Defending.html"> Defending</a></li>
-				<li ><a href="Attacking.html"> Attacking</a></li>
-				<li ><a href="index.html"> Basics</a></li>
-									
-			</ul>
-		</div>
-	    <br>
-	    <div class="row">
-		    <div class="leftcolumn">
+  <body>
+    <div id="wrapper">
+      <div class="nav">
+        <a href="index.html"><h2>E-Fifa</h2></a>
+        <ul>
+          <li id="active"><a href="Contact Us.html"> Contact Us</a></li>
+          <li><a href="About Us.html"> About Us</a></li>
+          <li><a href="Set piece.html"> Set Piece</a></li>
+          <li><a href="Defending.html"> Defending</a></li>
+          <li><a href="Attacking.html"> Attacking</a></li>
+          <li><a href="index.html"> Basics</a></li>
+        </ul>
+      </div>
 
-				<div class="card">
-					<h2>Contact Us</h2>
-					<p style="text-align: center;">
-						For any questions regarding the FIFA video game series,<br>Sponsorship,
-						press, Advertising opportunities, or any general query, Kindly reach out with the numbers below  <br>
-						 <br>
+      <div class="row">
+        <div class="leftcolumn">
+          <div class="card">
+            <h2>Contact Us</h2>
+            <p style="text-align: center">
+              For any questions regarding the FIFA video game series,<br />Sponsorship,
+              press, Advertising opportunities, or any general query, Kindly
+              reach out with the numbers below <br />
+              <br />
 
-						Phone: +2348186221894
-						<br>wasap: +2349027673744
-					</p>
-				</div>
-			
-		
-		    </div>	
-		    <div class="rightcolumn">
-				<div class="card">
-		      		<h2></h2>
-		      		<div class="fakeimg" style="height:100px;"></div>
-		      		
-				</div>
-
-	    	</div>
-	    </div>
-	    <br>
-
+              Phone: +2348186221894
+              <br />wasap: +2349027673744
+            </p>
+          </div>
+        </div>
+        <div class="rightcolumn">
+          <div class="card">
+            <h2></h2>
+            <div class="fakeimg" style="height: 100px"></div>
+          </div>
+        </div>
+      </div>
+      <br />
     </div>
 
-<div  class="footer">
-	<p>&copy; Allright Reserved</p>
-</div>
-</body>
-
+    <script src="script.js"></script>
+  </body>
 </html>
